# skills

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml
docs/: index.md  modules.md
docs/explanation/: design.md  project-and-global-scope.md
docs/how-to/: use-as-library.md  use-the-cli.md
docs/reference/: cli.md  configuration.md  library.md  plugins.md
docs/tutorials/: getting-started.md
skills/skills-manager/: SKILL.md
skills/skills-manager/agents/: openai.yaml
src/skills/: __init__.py  __main__.py  _compat.py  config.py  core.py  hookspecs.py  lock.py  manager.py  plugins.py  project.py  source.py
src/skills/builtin/: agents.py  config.py  git.py
src/skills/cli/: base.py
src/skills/cli/commands/: add.py  config.py  init.py  installed.py  list.py  parse.py  remove.py  update.py  use.py
src/skills/features/: authoring.py  discovery.py  installing.py  names.py  rendering.py
tests/: conftest.py  test_cli_adapter.py  test_config_scope.py  test_hooks_and_sources.py  test_lock.py  test_manager_flow.py
