[project]
name = "skills"
version = "0.0.1"
description = "A Python-native agent skills manager built around pyproject.toml and PDM-inspired workflows."
authors = [{ name = "Chojan Shang", email = "psiace@apache.org" }]
readme = "README.md"
license = "Apache-2.0"
keywords = ["agent-skills", "codex", "pyproject", "skills"]
requires-python = ">=3.10,<4.0"
dependencies = [
    "platformdirs>=4.3.6",
    "pluggy>=1.6.0",
    "tomli>=2.2.1; python_version < '3.11'",
    "tomli-w>=1.2.0",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://bubbuild.github.io/skills/"
Repository = "https://github.com/bubbuild/skills"
Documentation = "https://bubbuild.github.io/skills/"

[project.scripts]
skills = "skills.__main__:main"

[tool.skills]
agents = ["agents"]

[tool.skills.install]
mode = "symlink"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pre-commit>=4.5.1",
    "tox-uv>=1.33.4",
    "mypy>=1.19.1",
    "ruff>=0.15.7",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=1.0.3",
    "mkdocs-terminal>=4.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/skills"]

[tool.mypy]
files = ["src"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"src/skills/builtin/git.py" = ["S603"]

[tool.ruff.format]
preview = true
